# nomad-qr-codes

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/nomad_qr_codes/: main.py
